--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,18 +1,14 @@
 @import './base.css';
 
+:root {
+  font-family: 'Amiamie', sans-serif;
+  --color-highlight-background: #DBEFF8;
+  --color-link-background: #FA9127;
+}
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
 }
 
 @media (hover: hover) {
@@ -28,8 +24,6 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
 }
